versions/v4/README.md
# 值班回复助手 v4

v4 由两部分组成：

1. **Windows 桌面助手**：管理本地话术、全局快捷键、文档检索。
2. **Chrome/Edge 扩展**：识别网页输入框、自动替换礼貌用语、支持 `Ctrl+Shift+1～9` 网页话术，并提供 Linux/HPC 命令知识库。

所有话术和规则都保存在本机。扩展默认不会在任何网站自动替换，必须由你主动允许具体网站。

## 一、从 v3 更新

不需要删除或重建 `.venv`。

1. 完全退出正在运行的 v2。
2. 把旧项目中的 `duty_assistant.py` 改名为 `duty_assistant_v3.py`，作为备份。
3. 将 v4 压缩包中的全部文件复制到原项目目录，覆盖同名文件。
4. 保留原来的 `.venv` 文件夹。
5. 双击新版 `run.bat`。
6. 打开 `edge://extensions`，在扩展卡片上点击“重新加载”图标。
7. 刷新已经打开的工作网页。

个人话术和桌面设置位于 `%APPDATA%\DutyReplyAssistant`，覆盖代码不会删除它们。

## 二、安装浏览器扩展

扩展位于：

```text
browser_extension
```

选中加载的必须是这个文件夹，打开后应当直接看到 `manifest.json`。

### Microsoft Edge

1. 在地址栏打开 `edge://extensions`。
2. 打开左侧或页面上的“开发人员模式”。
3. 点击“加载解压缩的扩展”。
4. 选择项目中的 `browser_extension` 文件夹。
5. 在扩展菜单中找到“值班回复助手 · 网页增强”，点击眼睛或图钉将它固定到工具栏。

### Google Chrome

1. 在地址栏打开 `chrome://extensions`。
2. 打开右上角“开发者模式”。
3. 点击“加载已解压的扩展程序”。
4. 选择项目中的 `browser_extension` 文件夹。
5. 在拼图图标中固定“值班回复助手 · 网页增强”。

## 三、先在本地测试页测试

1. 双击 `start_test_page.bat`。
2. 浏览器会打开：

```text
http://localhost:8765/test_page.html
```

3. 点击浏览器工具栏上的扩展图标。
4. 打开“在此网站启用”。
5. 刷新测试网页。
6. 在第一个输入框中输入：

```text
你发一下截图
```

预期结果为：

```text
麻烦您提供一下截图
```

7. 把光标放在输入框中，按 `Ctrl+Shift+1`。
8. 预期插入第一条常用回复。
9. 测试结束后，回到运行测试服务器的黑色窗口，按 `Ctrl+C` 关闭。

## 四、在工作网站启用

1. 打开实际工作网页。
2. 点击扩展图标。
3. 打开“在此网站启用”。
4. 保持“自动礼貌替换”开启。
5. 刷新工作网页。
6. 先在不会直接发送消息的输入框中测试。

扩展按域名授权。例如允许 `support.example.com` 后，只会在该网站及相应子页面运行，不会自动修改其他网站。

## 五、编辑网页话术和规则

点击扩展图标，然后选择“编辑规则和话术”。

可以设置：

- 允许的网站域名
- “你”到“您”等替换规则
- `Ctrl+Shift+1～9` 对应的九条网页快捷回复

修改后点击“保存设置”，然后刷新工作网页。

注意：浏览器扩展话术和桌面助手话术目前分别保存。桌面端用于所有 Windows 软件，扩展端用于网页输入框。

## 六、Linux/HPC 命令知识库

在普通网页中按：

```text
Ctrl+Shift+K
```

也可以点击扩展图标，然后点击“打开 Linux 命令库”。

搜索框支持中文和英文，例如：

```text
怎么看节点
作业为什么排队
显存
文件夹大小
动态库
squeue
tail
grep
```

使用方法：

- 输入关键词筛选命令。
- 按 `↑`、`↓` 选择。
- 按 Enter 复制当前命令。
- 按 Esc 关闭。
- 也可以直接点击结果右侧的“复制”。

如 `Ctrl+Shift+K` 被其他扩展占用，在 Edge 地址栏打开：

```text
edge://extensions/shortcuts
```

找到“值班回复助手 · 网页增强”，重新指定“打开 Linux/HPC 命令搜索”的快捷键。

## 七、桌面助手的全局快捷键

双击 `run.bat` 启动桌面助手。启动脚本会优先使用原项目中的 `.venv`。

| 快捷键 | 功能 |
|---|---|
| `Alt+1～9` | 粘贴桌面助手对应话术到触发快捷键时的前台窗口 |
| `Ctrl+Alt+R` | 润色并替换外部软件中选中的文字 |
| `Ctrl+Alt+Space` | 显示或隐藏桌面助手 |

桌面助手继续使用 `Alt+1～9`，网页扩展改为 `Ctrl+Shift+1～9`，两者不再使用同一组快捷键。

## 八、打包桌面 EXE

双击：

```text
build_exe.bat
```

脚本会优先使用 `.venv`，完成后生成：

```text
dist\值班回复助手.exe
```

以后可以直接双击 EXE，不需要打开 CMD 或 VS Code。

由于打包出来的个人 EXE 没有商业数字签名，Windows 可能显示未知发布者或智能应用控制提示。开发测试阶段可以继续使用 `run.bat` 或在 VS Code 中运行。

## 九、已知限制

- 浏览器内部页面，例如 `edge://extensions` 和 `chrome://extensions`，不允许普通扩展修改。
- 某些网页编辑器使用封闭的 iframe、Canvas 或自行实现的输入系统，可能无法自动替换。
- 自动替换默认跳过密码框、代码块和明确标记为忽略的输入区域。
- 扩展不会自动点击“发送”，所有回复仍需你检查后手动发送。
- 单位如果通过策略禁止开发者模式扩展，需要联系单位管理员授权或后续发布到正式扩展商店。
